--- a/client-new/src/main/resources/static/roomInfo.html
+++ b/client-new/src/main/resources/static/roomInfo.html
@@ -109,6 +109,7 @@
             });
 
             function createQuotePage(response) {
+                console.log(JSON.stringify(response));
                 var url = 'http://localhost:8084/quoteResponse?arg=' + encodeURIComponent(JSON.stringify(response));
                 console.log("Opening URL:", url);
                 //window.location.href = url;
