Added UI Update to Home Page

--- a/admin/src/main/resources/static/checkOut.html
+++ b/admin/src/main/resources/static/checkOut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Checkout</title>
+        <title>Check-Out Page</title>
         <script>
             function confirmBooking() {
                 let id = parseInt(document.getElementById('id').value);
