--- a/admin/src/main/resources/static/retrieveBooking.html
+++ b/admin/src/main/resources/static/retrieveBooking.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>All Bookings</title>
+        <title>Retrieve Booking Page</title>
         <script>
             window.onload = function() {
                 fetch('http://localhost:8083/bookings', { method: 'GET' })
