--- a/admin/src/main/resources/static/rooms.html
+++ b/admin/src/main/resources/static/rooms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>All Rooms</title>
+        <title>All Rooms Page</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.4.0/nouislider.min.css">
         <style>
             body {
