--- a/admin/src/main/resources/static/retrieveBooking.html
+++ b/admin/src/main/resources/static/retrieveBooking.html
@@ -4,19 +4,23 @@
         <title>Retrieve Booking Page</title>
         <script>
             window.onload = function() {
-                fetch('http://localhost:8083/bookings', { method: 'GET' })
+                const urlParams = new URLSearchParams(window.location.search);
+                const ref = urlParams.get('ref');
+        
+                fetch(`http://localhost:8083/bookings/${ref}`, { method: 'GET' })
                     .then(response => response.json())
-                    .then(bookings => {
-                        let bookingsList = document.getElementById('bookingsList');
-                        for(let booking of bookings) {
-                            let listItem = document.createElement('li');
-                            listItem.textContent = `Booking ID: ${booking.ID}, Booking Reference: ${booking.booking_ref}, Type: ${booking.type}, Beds: ${booking.beds}, Bed Size: ${booking.bedSize}, View: ${booking.view}, Balcony: ${booking.balcony}, Accessibility: ${booking.accessibility}, Check-In: ${booking.checkIn}, Check-Out: ${booking.checkOut}, Price: ${booking.price}`;
-                            bookingsList.appendChild(listItem);
-                        }
+                    .then(booking => {
+                        // Display booking details
+                        let bookingInfo = `Booking ID: ${booking.ID}, Booking Reference: ${booking.booking_ref}, Type: ${booking.type}, Beds: ${booking.beds}, Bed Size: ${booking.bedSize}, View: ${booking.view}, Balcony: ${booking.balcony}, Accessibility: ${booking.accessibility}, Check-In: ${booking.checkIn}, Check-Out: ${booking.checkOut}, Price: ${booking.price}`;
+                        let bookingDiv = document.createElement("div");
+                        bookingDiv.textContent = bookingInfo;
+                        bookingsList.appendChild(bookingDiv);
+                        console.log(booking);
                     })
                     .catch(error => console.error('Error:', error));
             }
         </script>
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.4.0/nouislider.min.css">
         <style>
             body {
