Quick fix for room page not transfering to addRoom page

--- a/admin/src/main/resources/static/rooms.html
+++ b/admin/src/main/resources/static/rooms.html
@@ -175,7 +175,7 @@
         <form>
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <h2>All Rooms</h2>
-                <button onclick="window.location.href='addRoom.html'">Add Room</button>
+                <button type="button" onclick="window.location.href='addRoom.html'">Add Room</button>
             </div>
             <hr><br><br>
             <ul id="roomsList"></ul>
