add rooms presentation and back to panel option

--- a/admin/src/main/resources/static/admin-panel.html
+++ b/admin/src/main/resources/static/admin-panel.html
@@ -142,7 +142,8 @@
                 <button onclick="location.href='/checkIn.html'">Check-In</button><br><br>
                 <button onclick="location.href='/checkOut.html'">Check-Out</button><br><br>
                 <button onclick="location.href='/rooms.html'">Get All Rooms</button><br><br>
-                <button onclick="location.href='/bookings.html'">Get All Bookings</button><br><br><br><br>
+                <button onclick="location.href='/bookings.html'">Get All Bookings</button><br><br>
+                <button onclick="location.href='/addRoom.html'">Add Room</button><br><br><br>
             </div>
 
             <form action="/retrieveBooking.html" method="get">
