--- a/admin/src/main/resources/static/checkOut.html
+++ b/admin/src/main/resources/static/checkOut.html
@@ -218,7 +218,7 @@
                 <label for="email">Email:</label>
                 <input type="text" id="email"><br><br><br>
 
-                <button onclick="confirmBooking()">Confirm Booking</button>
+                <button onclick="confirmBooking()">Confirm Check-Out</button>
             </div>
             <div id="bookingInfo"></div>
             <div id="checkoutConfirmation"></div>
