--- a/admin/src/main/resources/static/bookings.html
+++ b/admin/src/main/resources/static/bookings.html
@@ -136,12 +136,11 @@
                 fetch('http://localhost:8083/bookings', { method: 'GET' })
                     .then(response => response.json())
                     .then(bookings => {
-                        // This line will print out the JSON data to your browser console.
                         console.log(JSON.stringify(bookings, null, 2));
                         
                         const bookingDetailsElement = document.getElementById('bookingDetails');
                         bookings.forEach(booking => {
-                            let bookingInfo = `Booking ID: ${booking.ID}, Booking Reference: ${booking.booking_ref}, Type: ${booking.type}, Beds: ${booking.beds}, Bed Size: ${booking.bedSize}, View: ${booking.view}, Balcony: ${booking.balcony}, Accessibility: ${booking.accessibility}, Check-In: ${booking.checkIn}, Check-Out: ${booking.checkOut}, Price: ${booking.price}`;
+                            let bookingInfo = `Hotel: ${booking.hotel}, Booking ID: ${booking.ID}, Booking Reference: ${booking.booking_ref}, Type: ${booking.type}, Beds: ${booking.beds}, Bed Size: ${booking.bedSize}, View: ${booking.view}, Balcony: ${booking.balcony}, Accessibility: ${booking.accessibility}, Check-In: ${booking.checkIn}, Check-Out: ${booking.checkOut}, Price: ${booking.price}`;
                             let bookingDiv = document.createElement("div");
                             bookingDiv.textContent = bookingInfo;
                             bookingDetailsElement.appendChild(bookingDiv);
