--- a/admin/src/main/resources/static/login.html
+++ b/admin/src/main/resources/static/login.html
@@ -127,9 +127,9 @@
         <div>
             <label for="hotel">Hotel:</label>
             <select id="hotel" name="hotel">
-                <option value="1">Hotel1</option>
-                <!-- <option value="2">Hotel 2</option>
-                <option value="3">Hotel 3</option>
+                <option value="Hotel1">Hotel 1</option>
+                <option value="Hotel2">Hotel 2</option>
+                <!-- <option value="3">Hotel 3</option>
                 <option value="4">Hotel 4</option>
                 <option value="5">Hotel 5</option> -->
             </select>
